--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,11 @@ body{
 .groupButtonAction{
     text-align: center ;
 }
+.editTask input{
+    border:none;
+    padding:2px 5px 2px 10px;
+}
+.editTask input:checked{
+    border: none;
+    color: red;
+}
